Add lots of docs and bumped version